--- a/app/src/main/res/layout/blog_view.xml
+++ b/app/src/main/res/layout/blog_view.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
-    android:background="@drawable/blog_gradient">
+    android:background="?attr/colorPrimary">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/link"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
@@ -23,10 +24,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:padding="5dp"
-            android:backgroundTint="?attr/colorAccent">
+            android:background="@drawable/blue_gradient">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView1"
@@ -38,7 +39,8 @@
                 app:cardCornerRadius="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/writer">
 
                 <ImageView
                     android:id="@+id/image"
@@ -51,22 +53,25 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:layout_marginStart="56dp"
+                android:inputType="textMultiLine"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:text="Title"
                 android:textColor="?attr/colorOnPrimary"
-                android:textSize="18sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/cardView1"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintStart_toEndOf="@id/cardView1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/writer"
                 android:layout_marginTop="6dp"
-                android:layout_marginStart="56dp"
+                android:layout_marginStart="20dp"
                 android:text="by person"
                 android:textSize="13sp"
                 android:textColor="?attr/colorOnPrimary"
