--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -85,6 +85,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
             app:layout_constraintTop_toBottomOf="@+id/textview4">
 
             <TextView
