--- a/app/src/main/res/layout/blog_view.xml
+++ b/app/src/main/res/layout/blog_view.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
-    android:background="?attr/colorPrimary">
+    android:id="@+id/link">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/link"
+
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
@@ -18,16 +18,16 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="15dp"
-        android:backgroundTint="@color/background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:padding="5dp"
-            android:background="@drawable/blue_gradient">
+            android:background="@drawable/blue_gradient"
+            android:padding="5dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView1"
@@ -37,17 +37,17 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 app:cardCornerRadius="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/writer">
+                app:layout_constraintEnd_toStartOf="@+id/writer"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY"
-                    android:background="?attr/colorAccent" />
+                    android:background="?attr/colorAccent"
+                    android:scaleType="fitXY" />
 
             </androidx.cardview.widget.CardView>
 
@@ -55,28 +55,28 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
+                android:inputType="textMultiLine"
                 android:text="Title"
                 android:textColor="?attr/colorOnPrimary"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/cardView1"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintStart_toEndOf="@id/cardView1"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
+                android:id="@+id/writer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/writer"
-                android:layout_marginTop="6dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="6dp"
                 android:text="by person"
-                android:textSize="13sp"
                 android:textColor="?attr/colorOnPrimary"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                app:layout_constraintStart_toEndOf="@id/cardView1"/>
+                android:textSize="13sp"
+                app:layout_constraintStart_toEndOf="@id/cardView1"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
