minor UI changes

--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -12,6 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="75dp"
+        android:background="@color/background"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
@@ -22,23 +23,29 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
             android:layout_weight="1.0"
-            android:text="innovators"
+            android:text="Innovators"
+            android:fontFamily="@font/montserrat_bold"
             android:textColor="?attr/colorOnPrimary"
             android:textSize="40sp"
             android:textStyle="normal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <TextView
             android:id="@+id/quest"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:scaleType="fitXY"
-            android:src="@drawable/quest"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:text="Quest"
+            android:fontFamily="@font/montserrat_bold"
+            android:textColor="#dd0a37"
+            android:textSize="40sp"
+            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toRightOf="@id/textView1"
-            app:layout_constraintStart_toEndOf="@+id/textView1" />
+            app:layout_constraintStart_toEndOf="@+id/textView1"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textview2"
@@ -47,6 +54,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
             android:text="Tagline"
+            android:fontFamily="@font/montserrat_regular"
             android:textAllCaps="true"
             android:textColor="?attr/colorOnPrimary"
             android:textSize="20sp"
@@ -60,6 +68,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
             android:justificationMode="inter_word"
+            android:fontFamily="@font/montserrat_regular"
             android:text="@string/tagline"
             android:textSize="16sp"
             android:textColor="?attr/colorOnPrimary"
@@ -72,6 +81,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
             android:text="Reach Us"
+            android:fontFamily="@font/montserrat_regular"
             android:textAllCaps="true"
             android:textColor="?attr/colorOnPrimary"
             android:textSize="20sp"
@@ -84,7 +94,7 @@
             android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:clickable="true"
             app:layout_constraintTop_toBottomOf="@+id/textview4">
 
@@ -95,6 +105,7 @@
                 android:layout_marginStart="15dp"
                 android:text="Contact Us"
                 android:textColor="?attr/colorOnPrimary"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
@@ -127,7 +138,7 @@
             android:id="@+id/linkedinSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +152,7 @@
                 android:layout_marginLeft="15dp"
                 android:text="LinkedIn"
                 android:textColor="?attr/colorOnPrimary"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
@@ -173,7 +185,7 @@
             android:id="@+id/facebookSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -187,6 +199,7 @@
                 android:layout_marginLeft="15dp"
                 android:text="Facebook"
                 android:textColor="?attr/colorOnPrimary"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                 app:layout_constraintStart_toEndOf="@+id/imageView7"
@@ -219,7 +232,7 @@
             android:id="@+id/instagramSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -234,6 +247,7 @@
                 android:text="Instagram"
                 android:textColor="?attr/colorOnPrimary"
                 android:textSize="15dp"
+                android:fontFamily="@font/montserrat_regular"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                 app:layout_constraintStart_toEndOf="@+id/imageView9"
                 app:layout_constraintTop_toTopOf="@+id/imageView9" />
@@ -265,7 +279,7 @@
             android:id="@+id/twitterSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -278,6 +292,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="15dp"
                 android:text="Twitter"
+                android:fontFamily="@font/montserrat_regular"
                 android:textColor="?attr/colorOnPrimary"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView11"
@@ -312,7 +327,7 @@
             android:id="@+id/youtubeSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -326,6 +341,7 @@
                 android:layout_marginLeft="15dp"
                 android:text="Youtube"
                 android:textColor="?attr/colorOnPrimary"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView15"
                 app:layout_constraintStart_toEndOf="@+id/imageView15"
@@ -359,7 +375,7 @@
             android:id="@+id/boardSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
+            style="@style/SelectableItemBackground"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -373,6 +389,7 @@
                 android:layout_marginLeft="15dp"
                 android:text="Board 2022"
                 android:textColor="?attr/colorOnPrimary"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                 app:layout_constraintStart_toEndOf="@+id/imageView13"
