--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
         android:text="Innovators "
         android:textSize="42sp"
         android:textStyle="bold"
-        android:fontFamily="@font/semibold"
+        android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/white"
         android:gravity="center"/>
         <TextView
@@ -38,7 +38,7 @@
             android:text="Quest"
             android:textSize="42sp"
             android:textStyle="bold"
-            android:fontFamily="@font/semibold"
+            android:fontFamily="@font/montserrat_regular"
             android:textColor="#dd0a37"
             android:gravity="center"/>
     </LinearLayout>
