--- a/app/src/main/res/drawable/nav_background.xml
+++ b/app/src/main/res/drawable/nav_background.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item  android:state_checked="true" >
+<animated-selector xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+    <item  android:state_checked="true" android:id="@+id/pressed" >
         <shape  >
             <solid android:color="@color/ripple_color"/>
             <corners
                 android:radius="17dp"/>
+            <stroke
+                android:color="#ffffff"
+                android:width="1dp"/>
         </shape>
     </item>
-    <item >
+    <item  android:id="@+id/defaulta">
         <shape  >
             <solid android:color="@color/black"/>
             <corners
                 android:radius="17dp"/>
         </shape>
     </item>
-</selector>
+</animated-selector>
