--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#1a1a1a</color>
+    <color name="black">#1f1f1f</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="background">#000000</color>
