--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,5 +28,5 @@
         android:id="@+id/navigation_about"
         android:name="com.example.iqapp.ui.about.AboutFragment"
         android:label="@string/title_about"
-        tools:layout="@layout/about_fragment" />
+        tools:layout="@layout/fragment_about" />
 </navigation>
